# Gemini-RAG-Model-PDF-Knowledge-System

./: .gitignore  LLMRAG.py  data_extraction.py  data_ingestion.py  indexing.py  pdfHandling.py  pyproject.toml  requirements.txt
