[project]
name = "llm-rag-integration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=1.47.0",
    "pdf2image>=1.17.0",
    "pdfminer-six>=20251107",
    "pdfplumber>=0.11.8",
    "pi-heif>=1.1.1",
    "pymupdf>=1.26.5",
    "pymupdf4llm>=0.0.27",
    "pytesseract>=0.3.13",
    "unstructured>=0.18.3",
]
